# smc-assembler

./: Cargo.toml  README.md  defines.txt  labels.txt  operations.txt  tokens.txt
crates/assembler/: Cargo.toml
crates/assembler/src/: assembler.rs  lib.rs  main.rs  save.rs
crates/assembler/src/assembler/: mod.rs
crates/assembler/src/assembler/backends/: batpu2_mattbatwings_none.rs  mod.rs  tau_analyzers_none.rs
crates/assembler/src/lexer/: mod.rs  token.rs
crates/assembler/src/parser/: mod.rs  operations.rs
crates/assembler/src/save/: convert.rs  mod.rs
crates/assembler/src/save/memory/: batpu2_instruction_memory.rs  mod.rs
crates/assembler/tests/: 2048.rs  batpu2.rs
crates/assembler/tests/programs/: 2048.mc
crates/assembler/tests/tau/: mod.rs
crates/assembler/tests/tau/expected/: ball.tau
crates/assembler/wix/: main.wxs
crates/macros/src/: lib.rs
crates/smc-assembler/: Cargo.toml
crates/smc-assembler/src/: lib.rs  main.rs
crates/smc-assembler/src/assembler/: mod.rs
crates/smc-assembler/src/lexer/: token.rs
crates/smc-assembler/src/parser/: mod.rs
crates/smc-assembler/tests/batpu2/: mod.rs
crates/smc-assembler/tests/batpu2/programs/: 2048.smc
crates/smc-assembler/tests/tau/: mod.rs
crates/smc-assembler/tests/tau/expected/: tetris.tau
crates/smc-assembler/tests/tau/programs/: tetris.tasm
crates/smc-lsp/: Cargo.toml
crates/smc-lsp/src/: main.rs
crates/smc-lsp/wix/: main.wxs
crates/smc-macros/: Cargo.toml
src/: main.rs
src/lexer/: mod.rs  token.rs
