[package]
name = "smc-assembler"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
smc-macros = { version = "0.1.0", path = "../macros" }

anyhow = { workspace = true }
arbitrary-int = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
