[package]
name = "smc-lsp"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
url = { workspace = true }

tower-lsp = "0.20"
smc-assembler = { version = "0.2.0", path = "../smc-assembler" }
